--- a/public/locales/kr/translation.json
+++ b/public/locales/kr/translation.json
@@ -8,18 +8,38 @@
             "title": "알림"
         },
         "associations": {
+            "title": "리액션"
         },
         "contacts": {
-            "title": "연락하기"
+            "title": "연락"
         },
         "explore": {
-            "title": "탐험하기"
+            "title": "탐험해요",
+            "domains": "주소",
+            "streams": "스트림",
+            "createNew": "신규 생성",
+            "createNewStream": {
+                "title": "새로운 스트림을 생성해요",
+                "desc1": "당신의 관할: ",
+                "desc2": " 의 설정과 함께"
+            }
         },
         "devtool": {
             "title": "개발자 도구"
         },
         "settings": {
-            "title": "설정"
+            "title": "설정",
+            "actions": {
+                "title": "액션",
+                "clearCache": "캐시 지우기",
+                "forceReload": "강제 리로드",
+                "logout": "로그아웃",
+                "areYouSure": "진짜로 하실 건가요?",
+                "logoutWarn": "비밀 코드 백업이 없다면 계정을 복원할 수 없어요."
+            }
+        },
+        "lists": {
+            "title": "리스트"
         }
     },
     "time": {
@@ -30,72 +50,203 @@
     "ui": {
         "profileEditor": {
             "update": "업데이트",
-            "updateSuccess": "업데이트 완료",
-            "updateFailed": "업데이트 실패",
-            "createNew": "새로 만들기"
+            "updateSuccess": "성공적으로 업데이트했어요",
+            "updateFailed": "업데이트에 실패했어요",
+            "createNew": "생성"
         },
         "draft": {
-            "placeholder": "오늘 무슨 일 있니??",
-            "attachImage": "이미지 붙여넣기",
-            "cantAttachImage": "살정에서 Imgur 클라이언트 ID를 완료하세요.",
-            "preview": "프리뷰",
-            "openPreview": "프리뷰 열기",
-            "closePreview": "프리뷰 닫기",
-            "emoji": "이모지들",
-            "clearDraft": "Clear draft",
-            "postToHome": "홈에도 올리기",
-            "noPostToHome": "홈에는 올리지 않기"
+            "placeholder": "지금 뭘 하고 계셨나요?",
+            "attachImage": "이미지 첨부",
+            "cantAttachImage": "설정탭에서 IMGUR ID를 설정하세요",
+            "preview": "미리보기",
+            "openPreview": "미리보기 열기",
+            "closePreview": "미리보기 닫기",
+            "emoji": "이모지",
+            "clearDraft": "초안 삭제",
+            "postToHome": "홈 스트림에도 올려요",
+            "noPostToHome": "홈 스트림에는 올리지 않을래요",
+            "current": "커런트"
+        },
+        "secret": {
+            "clickToReveal": "클릭하여 표시",
+            "warn": "아무도 당신의 화면을 보고있지 않다는 것을 확인하세요",
+            "copy": "복사"
+        },
+        "listSettings": {
+            "title": "리스트 설정",
+            "name": "리스트 이름",
+            "update": "업데이트",
+            "defaultDest": "기본 투고처",
+            "update": "업데이트",
+            "stream": "스트림",
+            "user": "사용자",
+            "pin": "고정",
+            "delete": "삭제"
         }
     },
     "settings": {
+        "title": "설정",
         "general": {
-            "basic": "Basic",
-            "showEditorOnTop": "타임라인 상단에 글 작성란을 표시",
-            "showEditorOnTopMobile": "타임라인 상단에 글 작성란을 표시(모바일)",
+            "title": "일반",
+            "basic": "기본",
+            "showEditorOnTop": "작성란 상단에 띄우기",
+            "showEditorOnTopMobile": "작성란 상단에 띄우기 (모바일)",
             "developerMode": "개발자 모드",
             "generateInviteCode": "초대코드 생성하기",
-            "inviteCode": "초대코드 (24시간 동안만 유효함)",
+            "inviteCode": "초대코드 (24시간 동안 유효해요.)",
             "copyInviteCode": "초대코드 복사",
-            "copied": "복사됨",
+            "copied": "복사되었어요",
             "language": "언어"
         },
         "profile": {
             "title": "프로필",
             "update": "업데이트",
-            "updated": "업데이트됨"
+            "updated": "업데이트되었어요"
+        },
+        "theme": {
+            "title": "테마"
         },
         "sound": {
+            "title": "소리",
             "sound": "소리",
             "volume": "볼륨",
             "override": {
                 "title": "Override",
-                "postSound": "게시음",
+                "postSound": "투고 사운드",
                 "notificationSound": "알림음"
             }
         },
         "emoji": {
-            "emojiPackage": "이모지 팩",
-            "emojiPackageURL": "이모지 팩 URL",
-            "packageNotFound": "팩이 없습니다.",
-            "copied": "복사됨",
-            "alreadyAdded": "이모지팩이 이미 추가되었습니다."
+            "title": "이모지",
+            "emojiPackage": "이모지팩",
+            "emojiPackageURL": "이모지팩 주소",
+            "packageNotFound": "팩을 찾을 수 없어요.",
+            "copied": "복사되었어요",
+            "alreadyAdded": "이모지팩이 이미 추가되어있어요."
         },
         "media": {
-            "storageProviderLabel": "사용량",
+            "title": "미디어",
+            "storageProviderLabel": "사용하는 스토리지 제공자",
             "corsSettings": "CORS 설정",
-            "imagePostSettings": "이미지 업로드 설정",
-            "afterRegisteringImgur": "Imgur 등록 후, 이동하는 곳: ",
+            "imagePostSettings": "이미지 포스트 설정",
+            "afterRegisteringImgur": "Imgur에 가입 이후 이동할 곳: ",
             "thisPage": "이 페이지",
-            "oauth2": "옵션과 함께 앱 생성하기 \"callback URL 없이 OAuth 2 authorization\""
+            "deleteCompletely": "완전 삭제",
+            "copyURL": "URL 복사",
+            "copyID": "ID 복사",
+            "oauth2": "그리고 옵션과 함께 앱 생성 \"OAuth 2 권한 승인 callback URL 없이 \"",
+            "descs": {
+                "domain": "Domain Storage는 이 도메인이 제공하는 스토리지예요.설정 없이 이용할 수 있지만 최대 용량이 설정되어 있어요.또한 파일 목록은 관리자에 의해 열람될 수 있고 약관을 위반하는 파일은 삭제될 수 있어요.",
+                "imgur": "이미지 업로드에 Imgur를 이용해요.비교적 간단하게 셋업할 수 있어요.업로드 가능한 내용은 Imgur의 규약을 따라요.",
+                "s3": "S3 는 이미지 업로드에 사용돼요. CloudFlare R2와 같은 S3 호환 서비스도 사용할 수 있어요. 설정하는 데 더 많은 노력이 필요하지만 파일을 자신의 제어 하에 유지할 수 있어요. 서비스에 따라 요금이 부과될 수 있지만 대부분의 경우 무료 계층에 적합해요."
+            }
         },
         "ap": {
-            "setup": "액티비티펍 아이디 설정.",
-            "cantBeChangedOnceRegistered": "**한번 등록되면 변경 불가능합니다.",
+            "title": "액티비티펍",
+            "setup": "액티비티펍 ID 설정.",
+            "cantBeChangedOnceRegistered": "**한 번 등록되면 변경할 수 없어요.",
             "confirming": "승인 중...",
-            "register": "가입 완료",
-            "helperText": "숫자, 알파벳(소문자, 대문자)를 사용할 수 있습니다: a-z, A-Z, 0-9",
-            "alreadyRegistered": "이미 존재하는 유저입니다.",
-            "tryAnotherID": "다른 ID로 등록하세요."
+            "register": "가입",
+            "helperText": "다음과 같은 문자를 사용할 수 있어요.: a-z, A-Z, 0-9",
+            "alreadyRegistered": "이 유저는 이미 가입되어있어요.",
+            "tryAnotherID": "다른 ID를 사용하세요."
         }
+    },
+    "welcome": {
+        "tagline1": "하나의 세계,",
+        "tagline2": "무한한 환경.",
+        "description": "콘커런트는 무수한 서버들을 하나의 계정으로 연결하는 새로운 타입의 분산형 SNS예요..",
+        "createAccount": "계정 생성하기.",
+        "import": "가져오기",
+        "gettingStarted": "시작해볼까요?",
+        "feature1": {
+            "title": "더 이상 각각의 서버 마다 계정을 만들 필요가 없어요.",
+            "description": "기존의 분산형 SNS는 서버마다 계정을 만들어야했죠. 콘커런트는 그럴 필요 없이 비밀키를 사용하여 하나의 계정으로 무수한 서버들을 연결해요! "
+        },
+        "feature2": {
+            "title": "각기 다른 주제의 타임라인",
+            "description": "콘커런트는 '스트림'이라고 부르는 커뮤니티를 자유롭게 만들 수 있어요. 특정 주제를 이야기하기 위해 기존 방식으로 계정을 계속 바꿔가며 사용했다고요? 이젠 취향이 비슷한 사람들과 가볍게 스트림을 통해 가장 좋아하는 주제에 대해 이야기하고 즐겨보세요! "
+        },
+        "wip": {
+            "title": "콘커런트는 현재 개발 중에 있어요.",
+            "description": "우리는 흥미로운 기능을 추가하는 중이며 아직은 많은 기능을 사용할 수는 없지만, 적당히 둘러보고 즐겨보시겠다면 환영입니다!",
+            "contribute": "버그나 좋은 아이디어가 있다면, 깃헙에 이슈를 올리고 개발에 참여하세요!",
+            "milestones": {
+                "title": "예정된 기능",
+                "item1": "- 과거 타임라인",
+                "item2": "- 미디어 전용 투고 및 사용자의 미디어 목록",
+                "item3": "- 뮤트와 같은 다양한 사용자 옵션",
+                "item4": "- 다른 사용자의 활동 타임라인",
+                "item5": "- 기타 등등"
+            }
+        }
+    },
+    "registration": {
+        "welcome": {
+            "title": "계정을 생성해 볼까요?",
+            "noticeTitle": "콘커런트는 현재 개발중이에요",
+            "notice": "아직 개발중이라 기능이 적지만, 적당히 둘러보고 즐겨보시겠다면 환영입니다!",
+            "next": "ID 카드 생성하기"
+        },
+        "yourID": {
+            "title": "당신의 ID",
+            "desc1": "이것은 콘커런트 세계에서 당신을 특정할 수 있는 문자열이에요.",
+            "desc2": "어떤 서버에서도 당신을 똑같이 알아보도록 무작위 문자열로 되어있어요.",
+            "desc3": "그 다음, 우리는 당신이 이 ID의 주인이라는 것을 확인하기 위한 비밀키를 제공할 것이에요.",
+            "next": "다음: ID 비밀코드 생성"
+        },
+        "saveSecret": {
+            "title": "비밀 코드",
+            "desc1": "이 비밀코드는 재로그인 또는 다른 기기에서 로그인 시 필요한 코드에요.",
+            "desc2": "절대 잃어버려서는 안되며 아무도 알 수 없게 하세요.",
+            "desc3": "한 번 잃어버리면 다시는 접속할 수 없어요. 다른사람이 알아냈다는 것은 해킹 위험이 높다는 이야기에요.",
+            "didyousave": "안전한 곳에 메모해두셨나요?",
+            "next": "다음: 비밀코드 확인"
+        },
+        "verifyCode": {
+            "title": "비밀코드 확인 중",
+            "match": "확인 완료!",
+            "notMatch": "이 비밀코드는 일치하지 않아요.",
+            "next": "다음: 도메인 설정"
+        },
+        "chooseDomain": {
+            "title": "도메인 설정하기",
+            "desc1": "당신의 메시지를 저장하고 전달할 도메인을 찾아요.",
+            "desc2": "어떤 도메인을 선택해도, 누구와도 연결이 가능해요.",
+            "desc3": "또한, (매니저가 열일한다면) 당연히 다른 도메인으로 이동할 수 있어요.",
+            "notice": "여기서 한번 concurrent.world에서 도메인 관할 사이트로 이동해요.",
+            "chooseFromList": "리스트에서 고르기",
+            "or": "혹은",
+            "directInput": "직접 URL 입력",
+            "tips": "팁: 직접 서버를 운영중이라면, 여기를 클릭하세요",
+            "jump": "페이지 등록하기",
+            "notRegistered": "도메인 등록을 확인할 수 없어요. 옮길 도메인에서 등록을 진행해봐요.",
+            "nextDisabled": "도메인 등록이 끝나면 다음 단계로 진행할 수 있어요.",
+            "next": "다음: 프로필 생성"
+        },
+        "createProfile": {
+            "title": "프로필 생성",
+            "desc": "여기서 이름, 아이콘, 자기소개를 설정해요."
+        },
+        "ready": {
+            "title": "떠나볼까요?",
+            "next": "시작"
+        },
+        "alreadyHaveAccount": "이미 계정이 있다고요?",
+        "importAccount": "계정 가져오기"
+    },
+    "import": {
+        "searching": "찾는 중…",
+        "notFound": "당신의 서버를 찾을 수 없었어요. 수동 입력으로 계석 할 수 있어요.",
+        "invalidSecret": "이 비밀코드는 일치하지 않아요.",
+        "notFoundOnServer": "해당 서버에서 계정을 찾을 수 없어요.",
+        "connectionError": "해당 서버에 연결이 안돼요.",
+        "input": "비밀 코드 또는 개인키 입력",
+        "secretPlaceholder": "12단어로 이루어진 문자열",
+        "welcome": "환영해요",
+        "domain": "도메인",
+        "import": "가져오기",
+        "noAccount": "아직도 계정이 없다고요?",
+        "createAccount": "계정 만들기"
     }
 }
